--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <script>window.html5 || document.write('<s' + 'cript src="js/vendor/html5shiv.js">' + '<' + '/s' + 'cript>');</script>
 <![endif]-->
-  <title>Bubble | No-code apps</title>
+  <title>ENTENDA | INÍCIO</title>
   <script type="text/javascript">
     window.bubble_session_uid = '1625958203107x294578670969899000';
   </script>
